fix some multi-layout bugs || add some shortcut keys for ViewFlipper || add some switch motions for ViewFlipper

--- a/nw/less/desktop.less
+++ b/nw/less/desktop.less
@@ -110,3 +110,11 @@ html {
     }
   }
 }
+
+.addon-border {
+  position: absolute;
+  left: 1%;
+  width: 99%;
+  height: 98%;
+  .box-shadow-mine(0, 0, 10px, black);
+}
